스터디 그룹 참여페이지

--- a/Study_with_us/MainPage.css
+++ b/Study_with_us/MainPage.css
@@ -149,7 +149,7 @@ main {
     position: absolute;
     top: 8px;
     right: 8px;
-    background-color: #ff5c5c;
+    background-color: gray;
     color: white;
     border: none;
     border-radius: 50%;
