--- a/gpttest/gpttest.css
+++ b/gpttest/gpttest.css
@@ -44,7 +44,7 @@ main {
 }
 #profile-menu-container {
     display: flex;
-    flex-direction: column; /* 세로 정렬 */
+    flex-direction: column; /* 프로필과 메뉴를 하나로 묶어서 세로정렬함 !!*/
     margin-right: 40px; /* 스터디 그룹과의 간격 */
 }
 
@@ -149,7 +149,7 @@ main {
     position: absolute;
     top: 8px;
     right: 8px;
-    background-color: #ff5c5c;
+    background-color: gray;
     color: white;
     border: none;
     border-radius: 50%;
