--- a/Study_with_us/2_main.css
+++ b/Study_with_us/2_main.css
@@ -15,7 +15,7 @@ body {
 /* 상단 타이틀 중앙 정렬 */
 header {
     width: 100%;
-    text-align: center; /* 타이틀을 중앙 정렬 */
+    /* text-align: center; 타이틀을 중앙 정렬 */
     margin: 25px; /* 타이틀과 본문 사이 간격 */
     display: flex;
     justify-content: center;
